# agent-wikipedia

./: README.md  output.json  pyproject.toml
app/: Dockerfile  app.py  app_entrypoint.py  requirements.txt
app_backend/: Dockerfile  agentwiki-0.1.0-py3-none-any.whl  app_api.py  app_api_entrypoint.py  requirements.txt
notebooks-dev/: claude3-agent-memory.ipynb  claude3-agent.ipynb  claude3-retrieval-agent-adding_memory.ipynb  claude3-retrieval-agent.ipynb
src/agentwiki/: __init__.py  agent_scratchpad.py  output_parser.py  prompts.py  retriever.py  retriever_agent.py  retriever_agent_mem.py
